# RGB-Led-Driver

./: .gitignore  README.md
firmware/: StimuliFile.stim  main.asm  rgb-led-driver-asm.asmproj  rgb-led-driver-asm.atsln  rgb-led-driver-asm.componentinfo.xml  upload.bat
hardware/: rgb-led-driver.dch  rgb-led-driver.dip
software/: CMakeLists.txt  colorlistmodel.cpp  colorlistmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rgb-driver-gui_de.ts  rgb-driver-gui_ru.ts  rgb-driver-gui_ua.ts
software/resources/: resources.qrc  resources.rc
